[package]
name = "dsf-iot"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bme280-util = [ "std", "linux-embedded-hal", "bme280" ]
utils = [ "bme280-util" ]

std = [ "dsf-core/std", "futures", "async-std", "dsf-rpc", "dsf-client" ]
alloc = [ "dsf-core/alloc" ]

default = [ "utils", "std" ]


[dependencies]
serde = "1.0.104"
structopt = "0.3.8"
humantime = "2.0.0"

tracing = "0.1.12"
tracing-subscriber = "0.1.6"
bytes = "0.5.4"
chrono-english = "0.1.4"
chrono = "0.4.10"
byteorder = "1.3.4"
log = "0.4.8"

futures = { version = "0.3.1", optional = true }
async-std = { version = "1.4.0", optional = true }

linux-embedded-hal = { version = "0.3.0", optional = true }
bme280 = { version = "0.2.1", optional = true }


[dependencies.dsf-core]
version = "^0.1.2"
default_features = false

[dependencies.dsf-rpc]
version = "0.1.0"
optional = true

[dependencies.dsf-client]
version = "0.1.0"
optional = true

[[bin]]
name = "dsf-bme280"
path = "src/utils/bme280.rs"
required-features = ["bme280-util"]
