[package]
name = "dsf-iot"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["std", "async-std", "serde", "futures", "dsf-rpc", "dsf-client", "chrono-english", "chrono", "tracing", "tracing-subscriber", "structopt", "humantime" ]
util = [ "client" ]

std = [ "dsf-core/std", "dsf-rpc", "dsf-client" ]
alloc = [ "dsf-core/alloc" ]

default = [ "client", "util", "std" ]


[dependencies]


bytes = { version = "0.5.4", default_features = false }
byteorder = { version = "1.3.4", default_features = false }
log = "0.4.8"
managed = { version = "*", default_features = false }


serde = { version = "1.0.104", optional = true }
structopt = { version = "0.3.8", optional = true }
futures = { version = "0.3.1", optional = true }
async-std = { version = "1.4.0", optional = true }
chrono = { version = "0.4.10", optional = true }
chrono-english = { version = "0.1.4", optional = true }
tracing = { version = "*", optional = true }
tracing-subscriber = { version = "*", optional = true }

humantime = { version = "2.0.0", optional = true }


[dependencies.dsf-core]
version = "^0.1.2"
default_features = false

[dependencies.dsf-rpc]
version = "0.1.0"
default_features = false
optional = true

[dependencies.dsf-client]
version = "0.1.0"
optional = true

[dev-dependencies]
linux-embedded-hal = "0.3.0"
bme280 = "0.2.1"



[[bin]]
name = "iotctl"
path = "src/util/main.rs"
required-features = ["util"]

[[example]]
name = "bme280"
required-features = ["util"]
