[package]
name = "dsf-iot"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"


[features]

defmt-default = [ "defmt", "dsf-core/defmt", "heapless/defmt-impl" ]

client = ["std", "async-std", "serde", "futures", "dsf-rpc", "dsf-client", "chrono-english", "chrono", "tracing", "tracing-subscriber", "humantime", "anyhow", "thiserror" ]
util = [ "client", "structopt", "dsf-core/structopt" ]

std = [ "dsf-core/std", "dsf-rpc", "dsf-client", "thiserror", "sled" ]
alloc = [ "dsf-core/alloc", "pretty-hex/alloc" ]

default = [ "client", "util", "std", "dsf-rpc" ]

# Debian package configuration (for cargo-deb)
[package.metadata.deb]
priority = "optional"
depends = "$auto, openssl"
assets = [
    ["target/release/dsf-iot", "/usr/bin/dsf-iot", "0755"],
]

[dependencies]
bytes = { version = "1.0.1", default_features = false }
byteorder = { version = "1.3.4", default_features = false }
log = "0.4.8"
managed = { version = "0.8.0", default_features = false }
bitflags = "1.3.2"

defmt = { version = "0.3.0", optional = true }
serde = { version = "1.0.104", optional = true }
structopt = { version = "0.3.8", optional = true }
futures = { version = "0.3.1", optional = true }
async-std = { version = "1.4.0", optional = true, features = ["attributes"] }
chrono = { version = "0.4.10", optional = true }
chrono-english = { version = "0.1.4", optional = true }
tracing = { version = "0.1.30", optional = true }
tracing-subscriber = { version = "0.3.8", optional = true }

strum = { version = "0.23.0", default_features = false, features = [ "derive" ] }
humantime = { version = "2.0.0", optional = true }
anyhow = { version = "1.0.44", optional = true }
thiserror = { version = "*", optional = true }
pretty-hex = { version = "0.2.1", default_features = false }
stor = "0.1.0"

sled = { version = "0.34.7", optional = true }
heapless = "0.7.10"


[dependencies.dsf-core]
version = "0.2.0"
default_features = false
features = [ "crypto_rust" ]

[dependencies.dsf-rpc]
version = "0.2.0"
default_features = false
optional = true

[dependencies.dsf-client]
version = "0.2.0"
optional = true

[dev-dependencies]
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.0"
bme280 = "0.2.1"
async-std = { version = "1.4.0", features = [ "attributes" ] }
simplelog = "0.10.2"
tracing-subscriber = { version = "0.3.8", features = [ "env-filter" ] }

ctor = "0.1.21"
color-backtrace = "0.5.1"
sensor-scd30 = "0.4.0"


[[bin]]
name = "iot-ctl"
path = "src/util/cli.rs"
required-features = ["util"]

[[bin]]
name = "iot-engine"
path = "src/util/app.rs"
required-features = ["util"]

[[example]]
name = "bme280-client"
required-features = ["util"]


[[example]]
name = "bme280-engine"
required-features = ["util"]

[patch.crates-io]
dsf-core = { path = "../dsf-workspace/dsf-core" }
dsf-rpc = { path = "../dsf-workspace/dsf-rpc" }
dsf-client = { path = "../dsf-workspace/dsf-client" }

#sodiumoxide = { path = "../sodiumoxide" }

